  . it supports renderint to multiple output (windows).

- balls can now be created and edited directly from the editor like all other parts, and not only from the script

- add a new 'DMD view' which renders the virtual DMD to a dedicated window (BGFX variant only)

FIXES:

- update FreeImage library to latest 3.19.0 beta (custom build with more optimizations enabled, and a special FP16 path for .exr files)

- DirectX 8 port for input handling (currently disabled)

- see Changelog_Scripts.txt for the respective core script changes (version 3.62)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes
- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

VP 10.8.0 Changelog
------------------------

FEATURES:

- VPX and VPVR are finally reunited!
  So, similar to the VP9.9 release, this pretty much rearchitects VPs whole rendering pipeline, but still allows to play all tables with (hopefully) pretty much the same look and feel.
  Some of the changes that came in via VPVR:

  - added SDL2 / OpenGL / OpenGLES as an additional render pipeline.
    switching between DirectX 9 and OpenGL is (for now) only possible at compile time, thus two executables are shipped.

  - the new OpenGL pipeline is also capable to render to VR devices (support for SteamVR):
    To use VR you need a SteamVR compatible HMD, a Steam account, and the Steam client/app
    with SteamVR client installed. More information on OpenVR + SteamVR can be found on http://steamvr.com
    You may also want to check out OpenComposite, as it seems to provide a performance boost for some users.

  - autodetection of SteamVR driver installation. If its not installed, the standard 2D mode is started up instead.
    If VR drivers are installed, and the HMD is turned on, VPX starts in VR mode. Otherwise a prompt shows up to choose between VR mode and 2D mode (can be disabled).
